Thesis work wrapped up for the week

--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\abstractname}{Acknowledgement}
 \begin{abstract}
-I would like to express gratitude to the SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub, which houses open-source code projects for music source separation research \parencite{umx}. The projects were essential to the creation of this thesis, and they include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}}, libraries for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing the BSS evaluation metrics for evaluating music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
+The SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub houses open-source code projects for music source separation research. The projects that were essential to this thesis include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} a library for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing BSS metrics to evaluate music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
 \end{abstract}
 
 \newpagefill
