--- a/latex/report.tex
+++ b/latex/report.tex
@@ -100,7 +100,7 @@
  \small{\texttt{sevag.hanssian@mail.mcgill.ca}} \\
  \small{\texttt{sevagh@protonmail.com}} \\\ \\\ \\
  \small{Thesis for Master of Arts in Music Technology}\\
- \small{Date TBD, 2021}}
+ \small{April 15, 2022}}
 
 % nil out the auto date
 \date{}
