--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -3,6 +3,8 @@
 
 \renewcommand{\abstractname}{Acknowledgement}
 \begin{abstract}
+\phantomsection
+\addcontentsline{toc}{section}{\abstractname}
 The SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub houses open-source code projects for music source separation research. The projects that were essential to this thesis include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} a library for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing BSS metrics to evaluate music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
 \end{abstract}
 
@@ -10,13 +12,17 @@ The SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub hous
 
 \renewcommand{\abstractname}{Abstract}
 \begin{abstract}
+\phantomsection
+\addcontentsline{toc}{section}{\abstractname}
 	Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture. Models for music demixing that use the Short-Time Fourier Transform (STFT) as their representation of music signals are popular and have achieved success in recent years. However, the fixed time-frequency resolution of the STFT, arising from the time-frequency uncertainty principle, requires a tradeoff in time-frequency resolution that can significantly affect music demixing results. The sliced Constant-Q Transform (sliCQT) is a time-frequency transform with varying time-frequency resolution that avoids the time-frequency tradeoff of the STFT. The model proposed by this thesis replaces the STFT with the sliCQT in a recent model for music demixing, to investigate the impact on the results.
 \end{abstract}
 
-\vspace{5em}
+\newpagefill
 
 \renewcommand{\abstractname}{R{\'e}sum{\'e}}
 \begin{abstract}
+\phantomsection
+\addcontentsline{toc}{section}{\abstractname}
 	La s{\'e}paration des sources musicales est la t{\^a}che d'{\'e}xtraire une estimation d'un ou plusieurs sources ou instruments musicales (p. ex. les percussions ou la voix) dans un enregistrement audio musicale. La t{\^a}che du d{\'e}mixage de musique consid{\`e}re le cas ou l'enregistrement audio musicale est s{\'e}par{\'e} en tous ses sources constitutifs qui peuvent {\^e}tre resomm{\'e}s pour recr{\'e}er l'ensemble d'origine. Les mod{\`e}les pour la d{\'e}mixage de musique qui utilisent la transformée de Fourier {\`a} court terme (TFCT) pour repr{\'e}senter les signaux musicales sont populaires est ont achev{\'e} du succ{\'e}s au cours des derni{\`e}res ann{\'e}es. Toutefois, la r{\'e}solution fix{\'e}e temporelle et fr{\'e}quentielle de la TFCT, r{\'e}sultant du principe d'incertitude de temps-fréquences, n{\'e}cessite un compromis entre la r{\'e}solution temporelle et fr{\'e}quentielle qui peu affecter consid{\'e}rablement les r{\'e}sultats du d{\'e}mixage de musique. La transform{\'e}e Constant-Q en tranche (sliCQT) est une transform{\'e}e temps-fr{\'e}quence avec une r{\'e}solution variable temporelle et fr{\'e}quentielle qui {\'e}vite le compromis de la TFCT. Le mod{\`e}le propos{\'e} par cette th{\`e}se remplace la TFCT par la sliCQT dans un mod{\`e}le de d{\'e}mixage de musique, pour investiguer l'impact sur les r{\'e}sultats.
 \end{abstract}
 
