Adjust bad sentence in ch5

--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -20,7 +20,7 @@ First, the PyTorch implementation of the NSGT/sliCQT allows these transforms to 
 
 To conclude my thesis, I will discuss ideas for xumx-sliCQ that I think are worth exploring, and that may lead to improved variants.
 
-The NSGT and sliCQT were shown to support arbitrary nonuniform frequency scales in Section \ref{sec:cqt}. In Section \ref{sec:slicqparamsrch}, I described how I chose a frequency scale for the sliCQT in the task of music demixing by searching for the highest SDR score of the mix-phase oracle, initially introduced in Section \ref{sec:noisyphaseoracle}. There can be any number of approaches to choosing the frequency scale that might improve the results of xumx-sliCQ. For example, the frequency scale can be tailored to a specific target, such as a human singing voice frequency scale, or a frequency scale specific to an instrument, such as a piano or guitar scale.
+The NSGT and sliCQT were shown to support arbitrary nonuniform frequency scales in Section \ref{sec:cqt}. In Section \ref{sec:slicqparamsrch}, I described how I chose a frequency scale for the sliCQT in the task of music demixing by searching for the highest SDR score of the mix-phase oracle, initially introduced in Section \ref{sec:noisyphaseoracle}. There can be any number of approaches to choosing the frequency scale that might improve the results of xumx-sliCQ. For example, the frequency scale can be tailored to the frequency range of a specific musical instrument.
 
 In Section \ref{sec:demixresults}, I provided some of my guesses as to why xumx-sliCQ failed to achieve its objective of beating UMX and X-UMX.
 
