--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -4,7 +4,7 @@
 \section{Experiment and discussion}
 \label{ch:experiment}
 
-This \hlblu{chapter} contains the results of the experiments described in Chapter \ref{ch:methodology}, and a discussion of the results. Refer to Appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer which produced the results in this \hlblu{chapter}.
+This \hlblu{chapter} contains the results of the experiments described in Chapter \ref{ch:methodology}, and a discussion of the results. Refer to Appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer which produced the results in this \hlblu{chapter}. Appendix \ref{appendix:codeavail} contains links to all of the code for the experiments and results shown in this chapter.
 
 The goal of this thesis \hlblu{is} to use the sliced Constant-Q Transform (sliCQT) in CrossNet-Open-Unmix (X-UMX), a neural network for music demixing. X-UMX represents musical signals with the Short-Time Fourier Transform (STFT), which is limited by a fixed time-frequency resolution. In contrast, the sliCQT has a varying time-frequency resolution, which may be more suitable for musical applications such as music demixing.
 
