--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -51,7 +51,7 @@ They are split across the following projects:
 		xumx-sliCQ neural network from Section \ref{sec:neuralnet}:\\
 		\url{https://github.com/sevagh/xumx-sliCQ}
 	\item
-		LaTeX files and scripts for generating this thesis, including all plots and results:\\
+		LaTeX files and scripts for generating this thesis, including all plots and demixing results in Chapter \ref{ch:experiment}:\\
 		\url{https://gitlab.com/sevagh/xumx_slicq_extra}
 	\item
 		Submissions made to the ISMIR 2021 Music Demixing Challenge (see Appendix \ref{appendix:crazyexperiments}):\\
