Add french corrections

--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -6,6 +6,20 @@
 \phantomsection
 \addcontentsline{toc}{section}{\abstractname}
 The SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub houses open-source code projects for music source separation research. The projects that were essential to this thesis include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} a library for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing BSS metrics to evaluate music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
+%I thank my supervisor Professor Philippe Depalle for guiding me in my research. Philippe’s
+%knowledge, professionalism, and continued enthusiasm for his work greatly inspired me to
+%challenge myself and learn new topics. I am extremely grateful for the generous financial
+%assistance I have received from the Jenny Panitch Beckow Memorial Scholarship given by the
+%Jewish Community Foundation of Montreal, a stipend granted to me by Philippe Depalle
+%through NSERC, and a Graduate Excellence Fellowship granted by the Schulich School of
+%Music. I thank Professors Ichiro Fujinaga and Marcelo Wanderley who have taught me
+%enlightening graduate seminars, and the entire Music Technology faculty for fostering a
+%vibrant learning environment. I thank my colleagues from the Music Technology area and
+%especially my friend Behrad Madahi for insightful conversations and enjoyable pastimes. My
+%family, whom I love the most, were a constant source of support and encouragement despite
+%being far away, and for them I am eternally grateful. Finally, I thank my loving and beloved
+%partner, Jhonatan, for his constant love and compassion and for his support in carrying out
+%this research.
 \end{abstract}
 
 \newpagefill
@@ -23,7 +37,7 @@ The SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub hous
 \begin{abstract}
 \phantomsection
 \addcontentsline{toc}{section}{\abstractname}
-	La s{\'e}paration des sources musicales est la t{\^a}che d'{\'e}xtraire une estimation d'un ou plusieurs sources ou instruments musicales (p. ex. les percussions ou la voix) dans un enregistrement audio musicale. La t{\^a}che du d{\'e}mixage de musique consid{\`e}re le cas ou l'enregistrement audio musicale est s{\'e}par{\'e} en tous ses sources constitutifs qui peuvent {\^e}tre resomm{\'e}s pour recr{\'e}er l'ensemble d'origine. Les mod{\`e}les pour la d{\'e}mixage de musique qui utilisent la transformée de Fourier {\`a} court terme (TFCT) pour repr{\'e}senter les signaux musicales sont populaires est ont achev{\'e} du succ{\'e}s au cours des derni{\`e}res ann{\'e}es. Toutefois, la r{\'e}solution fix{\'e}e temporelle et fr{\'e}quentielle de la TFCT, r{\'e}sultant du principe d'incertitude de temps-fréquences, n{\'e}cessite un compromis entre la r{\'e}solution temporelle et fr{\'e}quentielle qui peu affecter consid{\'e}rablement les r{\'e}sultats du d{\'e}mixage de musique. La transform{\'e}e Constant-Q en tranche (sliCQT) est une transform{\'e}e temps-fr{\'e}quence avec une r{\'e}solution variable temporelle et fr{\'e}quentielle qui {\'e}vite le compromis de la TFCT. Le mod{\`e}le propos{\'e} par cette th{\`e}se remplace la TFCT par la sliCQT dans un mod{\`e}le de d{\'e}mixage de musique, pour investiguer l'impact sur les r{\'e}sultats.
+	La s{\'e}paration des sources musicales est la t{\^a}che d'{\'e}xtraire une estimation d'une ou plusieurs sources ou instruments musicaux (p. ex. les percussions ou la voix) dans un enregistrement audio musicale. La t{\^a}che du d{\'e}mixage de musique consid{\`e}re le cas o{\`u} l'enregistrement audio musicale est s{\'e}par{\'e} en toutes ses sources constitutives qui peuvent {\^e}tre resomm{\'e}s pour recr{\'e}er l'ensemble d'origine. Les mod{\`e}les pour le d{\'e}mixage de musique qui utilisent la transformée de Fourier {\`a} court terme (TFCT) pour repr{\'e}senter les signaux musicaux sont populaires est ont obtenus du succ{\'e}s au cours des derni{\`e}res ann{\'e}es. Toutefois, la r{\'e}solution fix{\'e}e temporelle et fr{\'e}quentielle de la TFCT, r{\'e}sultant du principe d'incertitude de temps-fréquences, n{\'e}cessite un compromis entre la r{\'e}solution temporelle et fr{\'e}quentielle qui peut affecter consid{\'e}rablement les r{\'e}sultats du d{\'e}mixage de musique. La transform{\'e}e Constant-Q en tranche (sliCQT) est une transform{\'e}e temps-fr{\'e}quence avec une r{\'e}solution variable temporelle et fr{\'e}quentielle qui {\'e}vite le compromis de la TFCT. Le mod{\`e}le propos{\'e} par cette th{\`e}se remplace la TFCT par la sliCQT dans un mod{\`e}le de d{\'e}mixage de musique pour investiguer l'impact sur les r{\'e}sultats.
 \end{abstract}
 
 \end{document}
