--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -5,21 +5,9 @@
 \begin{abstract}
 \phantomsection
 \addcontentsline{toc}{section}{\abstractname}
-The SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub houses open-source code projects for music source separation research. The projects that were essential to this thesis include the reference implementation of Open-Unmix,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} a library for loading the MUSDB18-HQ dataset,\footnote{\url{https://github.com/sigsep/sigsep-mus-db}} and a library for computing BSS metrics to evaluate music source separation systems.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}}
-%I thank my supervisor Professor Philippe Depalle for guiding me in my research. Philippe’s
-%knowledge, professionalism, and continued enthusiasm for his work greatly inspired me to
-%challenge myself and learn new topics. I am extremely grateful for the generous financial
-%assistance I have received from the Jenny Panitch Beckow Memorial Scholarship given by the
-%Jewish Community Foundation of Montreal, a stipend granted to me by Philippe Depalle
-%through NSERC, and a Graduate Excellence Fellowship granted by the Schulich School of
-%Music. I thank Professors Ichiro Fujinaga and Marcelo Wanderley who have taught me
-%enlightening graduate seminars, and the entire Music Technology faculty for fostering a
-%vibrant learning environment. I thank my colleagues from the Music Technology area and
-%especially my friend Behrad Madahi for insightful conversations and enjoyable pastimes. My
-%family, whom I love the most, were a constant source of support and encouragement despite
-%being far away, and for them I am eternally grateful. Finally, I thank my loving and beloved
-%partner, Jhonatan, for his constant love and compassion and for his support in carrying out
-%this research.
+I would like to thank my supervisor, Professor Ichiro Fijunaga, for providing guidance throughout my master's degree and thesis. His rigor and attention to detail have made me a better researcher. I would like to thank my labmates who helped me work through many difficult parts; N{\'e}stor N{\'a}poles L{\'o}pez (who created Figure \ref{fig:glockwaveform}b), Timothy de Reuse, Emily Hopkins, and all the others. In the Music Technology department, Professor Philippe Depalle helped me hone my signal processing knowledge, and Professor Gary Scavone's emphasis on creativity allowed me to do my best work. I would like to thank my family and close friends for their unconditional support and encouragement.\\\ \\
+
+Finally, I appreciate the SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub, which contains key open-source code projects for music source separation research. Their emphasis on providing high-quality code to accompany academic papers have fostered an environment that's welcoming to beginners like myself, and I'm happy that I was able to work on this thesis during their Music Demixing 2021 challenge \parencite{mdx21}.\footnote{\url{https://mdx-workshop.github.io/}}
 \end{abstract}
 
 \newpagefill
